<resources>
    <string name="app_name">LectBoard</string>
    <string name="drawingAnnouncement">You are drawing on the screen.</string>
    <string name="canvasContentDescription">LectBoard allows you to use your android to draw on your PC.</string>
    <string name="drawing_button">Start Drawing!</string>
    <string name="MainMenuText">LectBoard</string>
    <string name="IPAddressHint">192.168.178.66</string>
    <string name="MainMenuTextPlease">Please fill in your local IPv4-address</string>
    <string name="textButtonRed">Red</string>
    <string name="textButtonGreen">Green</string>
    <string name="textButtonBlue">Blue</string>
    <string name="textButtonBlack">Black</string>
    <string name="textButtonSmaller">Smaller</string>
    <string name="textButtonBigger">Bigger</string>
</resources>
