<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawActivity">

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textButtonRed"
        android:textColor="@color/colorMarkerRed"
        app:layout_constraintEnd_toStartOf="@+id/buttonGreen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textButtonGreen"
        android:textColor="@color/colorMarkerGreen"
        app:layout_constraintEnd_toStartOf="@+id/buttonBlue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonRed"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textButtonBlue"
        android:textColor="@color/colorMarkerBlue"
        app:layout_constraintEnd_toStartOf="@+id/buttonBlack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonGreen"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textButtonBlack"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBlue"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSmaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/textButtonSmaller"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/textButtonBigger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>